--- a/BabyInABag/Views/Admin/ManageProducts.cshtml
+++ b/BabyInABag/Views/Admin/ManageProducts.cshtml
@@ -11,50 +11,55 @@
     <div class="main-contents">
         <!-- Panel -->
         <div class="main">
+            <h2 id="admin-header-text" style="border-bottom-color: black">Manage Products</h2>
+            <div class="container" style=" text-align:center;font-size: 20px;">
 
-            <!--<table class="w3-table w3-bordered w3-hoverable">-->
-            <table class="w3-table" style="font-size:14px;">
-                <tr style="border-bottom: 1px solid black; font-size:16px;">
-                    <th>
-                        @Html.DisplayNameFor(model => model.Product_Name)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Product_Price)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Product_Description)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Active)
-                    </th>
-                    <th></th>
-                </tr>
-
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Product_Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Product_Price)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Product_Description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Active)
-                        </td>
-                        <td>
-                            @Html.ActionLink("Edit", "Edit", "Products", new { id = item.Product_Id }, null)
-                        </td>
+                <p>
+                    @Html.ActionLink("Create New Products", "AddProduct", "Admin")
+                </p>
+                <!--<table class="w3-table w3-bordered w3-hoverable">-->
+                <table class="w3-table" style="font-size:14px;">
+                    <tr style="border-bottom: 1px solid black; font-size:16px;">
+                        <th>
+                            @Html.DisplayNameFor(model => model.Product_Name)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Product_Price)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Product_Description)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Active)
+                        </th>
+                        <th></th>
                     </tr>
-                }
-            </table>
 
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Product_Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Product_Price)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Product_Description)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Active)
+                            </td>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", "Products", new { id = item.Product_Id }, null)
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
+            </div>
+            <!-- End of Panel -->
         </div>
-        <!-- End of Panel -->
-    </div>
     <!-- End of Contents -->
 
    
