--- a/BabyInABag/Views/Colors/Delete.cshtml
+++ b/BabyInABag/Views/Colors/Delete.cshtml
@@ -16,21 +16,20 @@
 
         <font size="4">
             <table align="center">
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.Color_Name)
 
-                        @Html.DisplayFor(model => model.Color_Name)
+                <tr>
+                    <td>
+                        <b>@Html.LabelFor(model => model.Color_Name, htmlAttributes: new { @class = "control-label col-md-2" }) </b>
+                        @Html.DisplayFor(modelItem => Model.Color_Name)
+                        @*@Html.EditorFor(model => model.Color_Name, new { htmlAttributes = new { @class = "form-control",  } })
+        @Html.ValidationMessageFor(model => model.Color_Name, "", new { @class = "text-danger" })*@
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        @Html.DisplayNameFor(model => model.Color_HEX)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayFor(model => model.Color_HEX)
+                        <b>@Html.LabelFor(model => model.Color_HEX, htmlAttributes: new { @class = "control-label col-md-2" }) </b>
+                        &nbsp;
+                        <input type="color" value=@Model.Color_HEX disabled="disabled" />
                     </td>
                 </tr>
                 <tr>
@@ -40,17 +39,19 @@
                         {
                             @Html.AntiForgeryToken()
 
+                            <br />
+                            <input type="submit" value="Delete" class="btn btn-dark" />
 
-                            <input type="submit" value="Delete" class="btn btn-default" /> 
-               
 
-                                                                          
-                        }   
+
+                        }
 
                     </td>
                 </tr>
             </table>
         </font>
+
+       
 
         <div>
             @Html.ActionLink("Back to List", "Index")
