--- a/BabyInABag/Views/Colors/Edit.cshtml
+++ b/BabyInABag/Views/Colors/Edit.cshtml
@@ -24,7 +24,7 @@
                 <table align="center">
                     <tr>
                         <td>
-                            @Html.LabelFor(model => model.Color_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <b>@Html.LabelFor(model => model.Color_Name, htmlAttributes: new { @class = "control-label col-md-2" }) </b>
 
                             @Html.EditorFor(model => model.Color_Name, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Color_Name, "", new { @class = "text-danger" })
@@ -32,14 +32,16 @@
                     </tr>
                     <tr>
                         <td>
-                            @Html.LabelFor(model => model.Color_HEX, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <b>@Html.LabelFor(model => model.Color_HEX, htmlAttributes: new { @class = "control-label col-md-2" }) </b>
+                            &nbsp;
                             @Html.EditorFor(model => model.Color_HEX, new { htmlAttributes = new { @class = "form-control", type = "color", value = Model.Color_HEX } })
                             @Html.ValidationMessageFor(model => model.Color_HEX, "", new { @class = "text-danger" })
                         </td>
                     </tr>
                     <tr>
                         <td style="text-align:center;">
-                            <input type="submit" value="Save" class="btn btn-default" />
+                            <br />
+                            <input type="submit" value="Save" class="btn btn-dark" />
                         </td>
                     </tr>
                 </table>
