--- a/BabyInABag/Views/Colors/Index.cshtml
+++ b/BabyInABag/Views/Colors/Index.cshtml
@@ -8,39 +8,41 @@
 <div class="main-contents">
     <!-- Panel -->
     <div class="main">
-        <h2>Man</h2>
+        <h2 id="admin-header-text" style="border-bottom-color: black">Manage Colors</h2>
 
-        <p>
-            @Html.ActionLink("Create New", "Create")
-        </p>
-        <table class="w3-table" style="font-size:14px;">
-            <tr style="border-bottom: 1px solid black; font-size:16px;">
-                <th>
-                    @Html.DisplayNameFor(model => model.Color_Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Color_HEX)
-                </th>
-                <th></th>
-            </tr>
-
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Color_Name)
-                    </td>
-                    <td>
-                        <input type="color" value=@item.Color_HEX  disabled="disabled"/>
-                        @*@Html.DisplayFor(modelItem => item.Color_HEX)*@
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Color_Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Color_Id })
-                    </td>
+        <div class="container" style=" text-align:center;font-size: 20px;">
+            <p>
+                @Html.ActionLink("Create New Color", "Create")
+            </p>
+            <table class="w3-table" style="font-size:14px;">
+                <tr style="border-bottom: 1px solid black; font-size:16px;">
+                    <th>
+                        @Html.DisplayNameFor(model => model.Color_Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Color_HEX)
+                    </th>
+                    <th></th>
                 </tr>
-            }
 
-        </table>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Color_Name)
+                        </td>
+                        <td>
+                            <input type="color" value=@item.Color_HEX disabled="disabled" />
+                            @*@Html.DisplayFor(modelItem => item.Color_HEX)*@
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Color_Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Color_Id })
+                        </td>
+                    </tr>
+                }
+
+            </table>
+            </div>
         </div>
-</div>
+    </div>
