--- a/BabyInABag/Views/ProductCategories/Index.cshtml
+++ b/BabyInABag/Views/ProductCategories/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="main-contents">
         <!-- Panel -->
         <div class="main">
-            <h2 id="admin-header-text" style="border-bottom-color: black">Product Category</h2>
+            <h2 id="admin-header-text" style="border-bottom-color: black"> Manage Product Category</h2>
             <div class="container" style=" text-align:center;font-size: 20px;">
 
                 <p>
