--- a/BabyInABag/Views/Cart/Cart.cshtml
+++ b/BabyInABag/Views/Cart/Cart.cshtml
@@ -13,7 +13,7 @@
 
         <section class="section-first section-spacing products">
             <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Shopping Cart</h2>
-            @Html.ActionLink("Continue Shopping", "Products", "Products")
+            
 
 
 
@@ -23,29 +23,29 @@
                 <div class="product-wrapper">
                     <div id="productDiv" class="w3-panel w3-border w3-round-xlarge" style="width: 70%">
                         <div class="w3-row">
-                            <div class="w3-col w3-container m4 l3 ">
-                                <img id="image1" src="@item.Product_Image" alt="@item.Product_Image">
+                            <div class="w3-col w3-container m4 l3 " style="float:left;width:30%;height:10%">
+                                <img id="image1" style="width:100%;height:100%;float:left" src="@item.Product_Image" alt="@item.Product_Image">
                             </div>
-                        <div class="w3-col w3-container m8 l9">
-                            <h2>@Html.DisplayFor(modelItem => item.Product_Name)</h2>
-                            <h4 class="details"><b>Details</b></h4>
-                            <div class="description">
-                                <p><b>Knit Type:</b> @Html.DisplayFor(modelItem => item.Knit_Type) </p>
-                                <p><b>Color:</b> @Html.DisplayFor(modelItem => item.Color) </p>
-                                <p><b>Quantity:</b> @Html.DisplayFor(modelItem => item.Quantity) </p>
-                                @if (item.AdditionalRequirements != null)
-                                {
-                                    <p><b>Additional Requirements:</b> @Html.DisplayFor(modelItem => item.AdditionalRequirements) </p>
-                                }
+                            <div class="w3-col w3-container m8 l9" style="float:right;width:60%;">
+                                <h2>@Html.DisplayFor(modelItem => item.Product_Name)</h2>
+                                <h4 class="details"><b>Details</b></h4>
+                                <div class="description">
+                                    <p><b>Knit Type:</b> @Html.DisplayFor(modelItem => item.Knit_Type) </p>
+                                    <p><b>Color:</b> @Html.DisplayFor(modelItem => item.Color) </p>
+                                    <p><b>Quantity:</b> @Html.DisplayFor(modelItem => item.Quantity) </p>
+                                    @if (item.AdditionalRequirements != null)
+                                    {
+                                        <p><b>Additional Requirements:</b> @Html.DisplayFor(modelItem => item.AdditionalRequirements) </p>
+                                    }
 
-                            </div>
-                            <div id="pright">
-                                <h4 id="cprice">$@Html.DisplayFor(modelItem => item.Product_Price)</h4>
-                            </div>
+                                </div>
+                                <div id="pright">
+                                    <h4 id="cprice">$@Html.DisplayFor(modelItem => item.Product_Price)</h4>
+                                </div>
 
-                            <br />
-                            <button class="clear">@Html.ActionLink("Delete", "RemoveFromCart", "Cart", new { id = item.Product_Id }, new { style = "text-decoration:none;" })</button>
-                        </div>
+                                <br />
+                                <button class="clear">@Html.ActionLink("Remove", "RemoveFromCart", "Cart", new { id = item.Product_Id }, new { style = "text-decoration:none;" })</button>
+                            </div>
 
                     </div>
 
@@ -58,7 +58,7 @@
             </div>
             <br />
             <div style="width:25%; text-align:center;">
-                <button id="buttoncart">@Html.ActionLink("Check Out", "Checkout", "Orders", null, new { style = "text-decoration:none;" })</button>
+                <button id="buttoncart">@Html.ActionLink("Check Out", "Checkout", "Orders", null, new { style = "text-decoration:none;color:white;" })</button><b>OR</b> @Html.ActionLink("Continue Shopping", "Products", "Products")
             </div>
         </section>
         }
