removed knitting pattern

--- a/BabyInABag/Views/Shared/_Layout.cshtml
+++ b/BabyInABag/Views/Shared/_Layout.cshtml
@@ -207,10 +207,10 @@
             </ul>
             <ul class="footer-social-media">
                 <a href="https://www.facebook.com/babyinabagbylola/" target="_blank">
-                    <img src="~/images/facebook-icon.png" alt="Facebook Icon" / >
+                    <img src="/images/facebook-icon183544733.png" alt="Facebook Icon" / >
                 </a>
                 <a href="https://www.instagram.com/babyinabag/" target="_blank">
-                    <img src="~/images/instagram-icon.png" alt="Instagram Icon" />
+                    <img src="/images/instagram-icon183601771.png" alt="Instagram Icon" />
                 </a>
             </ul>
         </div>
