Bottom white space significantly reduced and Checkout alignments

--- a/BabyInABag/Views/Orders/Checkout.cshtml
+++ b/BabyInABag/Views/Orders/Checkout.cshtml
@@ -12,6 +12,7 @@
         <section class="section-first section-spacing">
             <div class="w3-container w3-padding-small">
                 <h2 class="w3-padding-16" style="text-align:center;">Checkout</h2>
+                <hr />
             </div>
 
 
@@ -20,7 +21,7 @@
 
             }
 
-            <div style="width:50%; float:left; margin:2%;">
+            <div style="width:50%; margin:2%; display: inline-block;">
                 <!-- product 1 -->
                 @foreach (var item in Model)
                 {
@@ -44,7 +45,7 @@
                 }
             </div>
 
-            <div id="Right_Box" style="width:40%;height:100%;float:left;margin-top:2%; margin-left:1%;">
+            <div id="Right_Box" style="width:40%;height:100%;float:right;margin-top:3%; margin-left:1%;">
 
                 <div id="Total_Bar" style="width:100%;">
                     <h5 style="font-size:22px;padding-left:10%;"><b>Total</b></h5>
