-Added Title and Knitting Icon to pages

--- a/BabyInABag/Views/Shared/_Layout.cshtml
+++ b/BabyInABag/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Baby In A Bag</title>
+    <link rel="icon" href="~/images/knitting.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/favicon.png">
     <!-- Font Burger jQuery -->
@@ -55,7 +56,6 @@
             font-size: 16px;
             text-decoration: none;
             border: 1px solid #111;
-
             padding: 0 20px;
             line-height: 38px;
             cursor: pointer;
@@ -98,17 +98,16 @@
         }
 
         @@media only screen and (min-width: 1000px) { /*Desktop mode:overrides when condition meets*/
-    .dropdown {
-        float: right;
-    }
+            .dropdown {
+                float: right;
+            }
 
-    .dropbtn {
-        font-weight: 900;
-        margin-right: 10px;
-        margin-top: 30px;
-    }
-}
-
+            .dropbtn {
+                font-weight: 900;
+                margin-right: 10px;
+                margin-top: 30px;
+            }
+        }
     </style>
 </head>
 
