--- a/BabyInABag/Views/Shared/_AdminLayout.cshtml
+++ b/BabyInABag/Views/Shared/_AdminLayout.cshtml
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Baby In A Bag</title>
+    <link rel="icon" href="~/images/knitting.png">
     <link rel="stylesheet" href="~/Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
