minor changes in views

--- a/BabyInABag/Views/Colors/Create.cshtml
+++ b/BabyInABag/Views/Colors/Create.cshtml
@@ -9,8 +9,8 @@
     <!-- Panel -->
     <div class="main">
         <font size="4">
-            <h2 id="admin-header-text">ADD COLOR</h2>
-            <label id="admin-header-text" style="color:blue">@Html.ViewBag.psuccess</label>
+            <h2 id="admin-header-text">Add Color</h2>
+            <h4 id="admin-header-text">  @Html.ViewBag.successcolor</h4>
             <hr>
             @using (Html.BeginForm())
             {
