--- a/BabyInABag/Views/Home/FAQ.cshtml
+++ b/BabyInABag/Views/Home/FAQ.cshtml
@@ -10,8 +10,17 @@
             <h2>FAQ</h2>
             <hr>
             <div class="sub-section-spacing">
-                <b>Q:What is the question?<br>A:Sizing</b>
-                <p>Q:<br>A:</p>
+                <p><b>Q:</b>What is the size of the blankets?</p>
+                <p><b>A:</b>All blankets are one size fits all.</p>
+                <br />
+                <p><b>Q:</b>What is the size of the blankets?</p>
+                <p><b>A:</b>All blankets are one size fits all.</p>
+                <br />
+                <p><b>Q:</b>What is the size of the blankets?</p>
+                <p><b>A:</b>All blankets are one size fits all.</p>
+                <br />
+                <p><b>Q:</b>What is baby sleeping bag?</p>
+                <p><b>A:</b>Most nursery and baby stores now offer each bedding design in sleeping bag form as well as the traditional cot blanket. Although blankets and sheets are still safe to use, there is a slight risk of babies wriggling under the covers in the night.</p>
             </div>
             
         </section>
