--- a/BabyInABag/Views/Products/Products.cshtml
+++ b/BabyInABag/Views/Products/Products.cshtml
@@ -68,7 +68,7 @@
 
                                                     <h4>Quantity</h4>
                                                     <input name="pid" value="@item2.Product_Id" type="hidden" />
-                                                    <select name="quantity">
+                                                    <select style="float:rightw;" name="quantity">
                                                         <option value="1">1</option>
                                                         <option value="2">2</option>
                                                         <option value="3">3</option>
