--- a/BabyInABag/Views/Home/About.cshtml
+++ b/BabyInABag/Views/Home/About.cshtml
@@ -7,7 +7,14 @@
             <h2>About</h2>
             <hr>
             <div class="sub-section-spacing">
-                <p>I like balloons.</p>
+                <h1>About Us</h1>
+                <h2>Overview</h2>
+                <p>Soft and cuddly hand knit baby sleep sacks that can be custom ordered. Good for cribs, car seats, strollers, bassinets. Available in many colors.</p>
+                <h2>Mission Statement</h2>
+                <p>
+                    “I’m not doing this because I’m going to make a ton of money. I enjoy knitting, I really enjoy knitting. I enjoy seeing the baby nice and cozy and warm in it. It’s because I started off when my daughter’s friends were having babies and she wanted them to have a blanket and then it just sort-of expanded. But to me, me sitting in front of the T.V. knitting. I enjoy it, it passes the time so, it’s not I don’t give up anything to do now. Going to retirement with it and I can do it, you know, in nursing rooms. Someone people are actually saying there’s… nursing home, they’re making the… old people learn to knit and if they promote it as made by an 80-year-old grandmother… it tends to have meaning”
+                    <b>-Loretta Morson, February 5th, 2017</b> 
+                </p>
             </div>
         </section>
     </div>
