--- a/BabyInABag/Views/Orders/Checkout.cshtml
+++ b/BabyInABag/Views/Orders/Checkout.cshtml
@@ -59,7 +59,7 @@
                         </tr>
                         <tr>
                             <td><b>Shipping</b></td>
-                            <td align="right"><i class="fa fa-info-circle" style="font-size:15px;width:50%;float:right;text-align:right;" title="You can find the options for this product on the FAQ page."></i></td>
+                            <td align="right"><i class="fa fa-info-circle" style="font-size:15px;width:50%;float:right;text-align:right;" title="You can find shipping cost on Paypal website."></i></td>
                         </tr>
                         @*<tr>
                         <td colspan="2"><b>Standard Shipping ($5.00)</b></td>
