--- a/BabyInABag/Views/Home/Index.cshtml
+++ b/BabyInABag/Views/Home/Index.cshtml
@@ -11,16 +11,18 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
+                
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                 <img src="~/images/banner1.png" class="d-block w-100" alt="First slide" />
+                       @* <img src="@Url.Content("~/images/banner1.png")" class="d-block w-100" alt="First slide" />*@
+                        <img src="~/images/banner1.png" class="d-block w-100" alt="First slide" />
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="~/images/banner2.png" alt="Second slide">
+                        <img class="d-block w-100" src="@Url.Content("~/images/banner2.png")" alt="Second slide">
                     </div>
                     <!-- <div class="carousel-item">
-                                        <img class="d-block w-100" src="images/banner3.png" alt="Third slide">
-                                      </div> -->
+                            <img class="d-block w-100" src="images/banner3.png" alt="Third slide">
+                          </div> -->
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
