--- a/BabyInABag/Views/Home/Index.cshtml
+++ b/BabyInABag/Views/Home/Index.cshtml
@@ -1,80 +1,48 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Accounts";
+    Layout = null;
 }
 
-<main>
-    <div class="wrapper">
-        <section class="index-banner">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                       @* <img src="@Url.Content("~/images/banner1.png")" class="d-block w-100" alt="First slide" />*@
-                        <img src="~/images/banner1.png" class="d-block w-100" alt="First slide" />
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="@Url.Content("~/images/banner2.png")" alt="Second slide">
-                    </div>
-                    <!-- <div class="carousel-item">
-                            <img class="d-block w-100" src="images/banner3.png" alt="Third slide">
-                          </div> -->
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </section>
-        <!-- <section class="section-spacing index-meme">
-          <h2>Testimonial</h2>
-          <h1>___</h1>
-        </section> -->
-        <section class="section-spacing testimonial">
-            <h2>What people think about us!</h2>
-            <div class="testimonial-wrapper">
-                <div class="testimonial-info">
-                    <img src="https://i.imgur.com/veAEeAB.jpg" alt="Testimonial Image" />
-                    <p>Jeff Rothchild</p>
-                    <p>"My baby is looking cute in it! I love it!"</p>
-                </div>
 
-                <div class="testimonial-info">
-                    <img src="https://i.imgur.com/gRzU4tP.png" alt="Testimonial Image" />
-                    <p>Robert kaif</p>
-                    <p>"This is so comforting and nice product!"</p>
-                </div>
+<!doctype html>
+<title>Site Maintenance</title>
+<style>
+    body {
+        text-align: center;
+        padding: 150px;
+    }
 
-                <div class="testimonial-info">
-                    <img src="https://i.imgur.com/s1ocvWY.png" alt="Testimonial Image" />
-                    <p>Jamil Granada</p>
-                    <p>"This is the best sleeping bag ever! It is so light and compact!"</p>
-                </div>
+    h1 {
+        font-size: 50px;
+    }
 
-                <div class="testimonial-info">
+    body {
+        font: 20px Helvetica, sans-serif;
+        color: #333;
+    }
 
-                    <img src="https://i.imgur.com/b5PxlsX.png" alt="Testimonial Image" />
-                    <p>Mathew Yeboah</p>
-                    <p>"Nice and easy to use! This is a good buy!"</p>
-                </div>
-            </div>
-        </section>
-        <!--
-        <section class="index-boxlinks">
-          <a href="#">
-            <div class="index-boxlink-rectangle">
-              <h3>FACEBOOK</h3>
-            </div>
-          </a>
-          </section>
-          -->
+    article {
+        display: block;
+        text-align: left;
+        width: 650px;
+        margin: 0 auto;
+    }
+
+    a {
+        color: #dc8100;
+        text-decoration: none;
+    }
+
+        a:hover {
+            color: #333;
+            text-decoration: none;
+        }
+</style>
+
+<article>
+    <h1>We&rsquo;ll be back soon!</h1>
+    <div>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. we&rsquo;ll be back online shortly!</p>
+        <p>&mdash; The Team</p>
     </div>
-</main>
+</article>
