Main images are working hard coded

--- a/BabyInABag/Views/Shared/_Layout.cshtml
+++ b/BabyInABag/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
         <div class="wrapper">
             <i class="menu-trigger-left fas fa-bars"></i>
             <!-- <i class="menu-trigger-right fas fa-bars"></i> -->
-            <a href="@Url.Action("Index", "Home")" class="header-brand">Baby In A Bag</a>
+            <a href="@Url.Action("Index", "Home")" class="header-brand">Organic >
             <div class="nav-menu">
                 <nav>
                     <ul>
